--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7 no-js"> <![endif]-->
 <!--[if IE 7 ]>    <html class="ie ie7 lt-ie9 lt-ie8 no-js"> <![endif]-->
@@ -30,7 +26,8 @@
 <!-- ////////////////////////////////////////// --> 
 
 <link rel="stylesheet" href="css/brewery.css">
-<link rel="stylesheet" href="css/login.css">
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/dataTables.min.css">
 
 
 
@@ -44,6 +41,8 @@
 <!-- ////////////////////////////////////////// --> 
 <script src="js/modernizr-2.6.1.min.js"></script>
 
+
+
 	</head>
 
 	<body class="beer beer-landing">
@@ -56,8 +55,28 @@
 <header class="header-global">
     <div class="wrapper">
 
-        <!-- Logo -->
-    	<h1><a class="logo" href="/">Penrose Brewing Company</a></h1>
+        <!-- Main Nav --> 
+        <a href="#menu-main" class="nav-mobile-toggle menu-trigger">Menu</a>
+        <nav id="nav-main" class="nav-main nav-header">
+            <ul>
+                <!-- Hidden on desktop -->
+                <li class="home"><a href="/">Home</a></li>
+                
+                <li class="nav-link"><a href="javascript:void(0)" onclick="showLandingPage();">Home</a></li>
+                <li class="nav-link"><a href="javascript:void(0)" onclick="getDeliveryOptions();">Place Order</a></li>
+                <li class="nav-link"><a href="javascript:void(0)" onclick="getOpenOrders();">View Orders</a></li>
+                <li class="nav-link"><a href="javascript:void(0)">&nbsp;</a></li>
+         		<li class="header-logo"><h1><a class="logo" href="/">Penrose Brewing Company</a></h1></li>
+         		<li class="nav-link"><a href="javascript:void(0)">&nbsp;</a></li>
+				<li class="nav-link"><a href="javascript:void(0)" onclick="getCustomerInfoForm();">Update Info</a></li>
+                <li class="nav-link"><a href="index.html">Log Out</a></li>
+                
+                <!-- Hidden on Desktop -->
+                <!-- <li class="nav-mobile"><a href="/where-to-buy">Where to Buy</a></li> -->
+                <li class="nav-mobile"><a href="/taproom#tap-list">Current Tap List</a></li>
+            </ul>
+        </nav>
+
     </div>   
 </header>
 
@@ -99,30 +118,27 @@
 
 			<hr class="section-rule">
 
-			<div class="wrapper">
-			   <!--
-				<div class="beer-grid no-headline-rule">
-				</div>
-			-->
+			<div class="wrapper" id="main-content">
 
 				<div id="login-div">
 					<div id="login-forms">
-						<form action="home.html" method="post">
-							Username: <input type="text" id="username"><br>
-							Password: <input type="password" id="password">
-							<br><br>
-							<a id="forgot-pass-link" href="forgot_password.html">Forgot password</a>
-							<br><br>
-							<input type="submit" id="login-btn" onclick="return verifyLogin();">
-						</form>
+						Username: <input type="text" id="username"><br><br>
+						Password: &nbsp;&nbsp;<input type="password" id="password">
+							
+						<br><br>
+							
+						<a id="forgot-pass-link" href="forgot_password.html">Forgot password</a>
+							
+						<br><br>
+							
+						<input type="button" id="login-btn" onclick="verifyLogin();" value="Submit">
 					</div>
 					<div id="login-info">
-						<p>If you require assistance with login information,</p> 
-						<p>please contact customer service at (123) 456-7890.</p>
+						<p>If you require assistance with login information, <br> please contact customer service at (123) 456-7890.</p>
 					</div>
 				</div>
-					
-			</div>    
+			</div>   
+
 		</section>		 
 
 		
@@ -176,16 +192,16 @@
 <script src="js/animation.beer.js"></script>
 <script src="js/page.beer-landing.js"></script>
 <script src="js/site.js"></script>
+<script src="js/handlebars.min.js"></script>
+<script src="js/template_controller.js"></script>
 
 		 <script type="text/javascript">
             
             $(document).ready(function () {
-                $('.module-beer').bigClick({
-                    anchorSelector: '.btn-more-alt',
-                    addClass:'hover'
-                });
+            	hideNavLinks();
     		});
         </script>
+
 	</body>
 
 </html>
