--- a/views/penrose/css/styles.css
+++ b/views/penrose/css/styles.css
@@ -18,6 +18,32 @@ th {
 }
 
 
+
+/* LOGIN PAGE */
+
+#login-div {
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#login-forms, #login-info {
+	display: inline-block;
+}
+
+#forgot-pass-link {
+	font-weight: italics;
+	font-size: 12px;
+	text-decoration: underline;
+}
+
+#login-info {
+	vertical-align: top;
+	margin-left: 3%;
+}
+
+
+
 /* LANDING PAGE */
 
 .header-logo {
@@ -115,7 +141,7 @@ th {
 /* CHECKOUT PAGE */
 
 textarea {
-	width: 250px;
+	width: 280px;
 }
 
 
