--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -119,6 +119,7 @@
 			<hr class="section-rule">
 
 			<div class="wrapper" id="main-content">
+				<p id="customer-code"></p>
 
 				<div id="login-div">
 					<div id="login-forms">
