--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -3,7 +3,7 @@
 		<a class="back-button" href="javascript:void(0)" onclick="getOpenOrders();" align="left">&lt;&lt; Back</a>
 	</div>
 
-	<h4>Order {{orderNumber}}</h4><br>
+	<h4>Order #{{orderNumber}}</h4><br>
 	<p>{{deliveryMethod}} {{deliveryDate}}</p>
 
 	<table id="order-table"> 
@@ -17,43 +17,24 @@
 			</tr>
 		</thead>
 		<tbody>
+			{{#lines}}
 			<tr>
-				<td>Devoir</td>
-				<td>Saison Ale</td>
-				<td>Keg</td>
-				<td>$89.99</td>
-				<td>5</td>
+				<td>{{product}}</td>
+				<td>{{desc}}</td>
+				<td>{{unit}}</td>
+				<td>${{price}}</td>
+				<td>{{quantity}}</td>
 			</tr>
-			<tr>
-				<td>Devoir</td>
-				<td>Saison Ale</td>
-				<td>Bottles (6)</td>
-				<td>$6.99</td>
-				<td>20</td>
-			</tr>	
-			<tr>
-				<td>Devoir</td>
-				<td>Saison Ale</td>
-				<td>Bottles (12)</td>
-				<td>$12.99</td>
-				<td>10</td>
-			</tr>	
-			<tr>
-				<td>P·2</td>
-				<td>Belgian Pale Ale</td>
-				<td>Keg</td>
-				<td>$89.99</td>
-				<td>3</td>
-			</tr>
+			{{/lines}}
 		</tbody>
 	</table>
 
 	<div class="total" align="right">
-		<p>Subtotal: $500.00</p>
-		<p>Tax: $48.00</p>
-		<p><b>Total: $548.00</b><p>
+		<p><b>Total: ${{orderTotal}}</b><p>
 	</div>
 
 	<script type="text/javascript">
       displayTable("order-table");
    </script>
+
+
